# alarmClock

./: .gitignore  LICENSE  alarm.py  alarmSettings.txt  readme.md
LCD1602-RGB-Module-demo/Jetson Nano/: Discoloration.py
LCD1602-RGB-Module-demo/Pico/c/: lcd1602_RGB_Module.c  main.c
LCD1602-RGB-Module-demo/Pico/c/LCD1602-RGB-Module-demo/: CMakeLists.txt  lcd1602_RGB_Module.h
LCD1602-RGB-Module-demo/Pico/python/: Choose_Color.py  Discoloration.py  RGB1602.py
LCD1602-RGB-Module-demo/Raspberry/: Choose_Color.py
LCD1602-RGB-Module-demo/arduino/examples/Direction/: Direction.ino
experiments/: displaytest.py  songtest.py
macropad/alarmInput/: alarmInput.ino
macropad/example/: example.ino
